--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,71 @@
-/* general body settings */
-body {
-    background-color: #2c2f33;
-    color: #FFFFFF;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.container {
+    margin: 20px auto;
     text-align: center;
-    position: center fixed;
+}
+
+.buttons {
+    width: 100%;
+    height: 50%;
+    /* text-align: left; */
+}
+
+h1 {
+    margin: 0 auto;
+    text-align: center;
+    font-family: 'Roboto Slab', serif;
+    color: darkgreen;
+}
+
+.timer,
+.question,
+.results,
+.gif-screen,
+.start-button,
+.restart-button {
+    color: darkgreen;
+    text-align: center;
+    margin: 0 auto;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+    display: block;
+    font-weight: bold;
+}
+
+.question {
+    width: 700px;
+}
+
+.winGif,
+.loseGif,
+.endGif {
+    width: 300px;
+    height: 200px;
+}
+
+.wallpaper {
+    background-color: rgb(240, 223, 202);
+    background-position: cover;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
+.timer {
+    /* display: block; */
+    color: darkgreen;
+}
+
+.scoreboard {
+    color: darkgreen;
+    text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    width: 30%;
+    margin-left: 35%;
+    /* padding: 10px; */
+}
+
+p {
+    width: 100%;
+    font-size: 20px;
 }
